styles/globals.css
/* @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap"); */
html,
body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   /* font-family: "Poppins", sans-serif !important; */
}

a {
   color: inherit;
   text-decoration: none;
}

* {
   box-sizing: border-box;
}

.custom-btn {
   width: 210px;
   height: 40px;
   color: #fff;
   border-radius: 5px;
   padding: 10px 25px;
   font-weight: 500;
   background: transparent;
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
   display: inline-block;
   box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
      7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
   outline: none;
   text-transform: uppercase;
   letter-spacing: 1px;
}

/* 8 */
.btn-8 {
   background: rgb(126, 56, 237);
   background-image: linear-gradient(
      90deg,
      rgba(126, 56, 237, 1) 0%,
      rgba(200, 47, 214, 1) 100%,
      rgba(0, 212, 255, 1) 100%
   );
   line-height: 42px;
   padding: 0;
   border: none;
}
.btn-8 span {
   position: relative;
   display: block;
   width: 100%;
   height: 100%;
   font-size: 14px;
}
.btn-8:before,
.btn-8:after {
   position: absolute;
   content: "";
   right: 0;
   bottom: 0;
   background: rgba(126, 56, 237, 1);
   transition: all 0.3s ease;
}
.btn-8:before {
   height: 0%;
   width: 2px;
}
.btn-8:after {
   width: 0%;
   height: 2px;
}
.btn-8:hover:before {
   height: 100%;
}
.btn-8:hover:after {
   width: 100%;
}
.btn-8:hover {
   background: transparent;
}
.btn-8 span:hover {
   color: rgba(126, 56, 237, 1);
}
.btn-8 span:before,
.btn-8 span:after {
   position: absolute;
   content: "";
   left: 0;
   top: 0;
   background: rgba(126, 56, 237, 1);
   transition: all 0.3s ease;
}
.btn-8 span:before {
   width: 2px;
   height: 0%;
}
.btn-8 span:after {
   height: 2px;
   width: 0%;
}
.btn-8 span:hover:before {
   height: 100%;
}
.btn-8 span:hover:after {
   width: 100%;
}
.btn-8:active {
   top: 2px;
}

.btn-9 {
   background: transparent;
   color: rgba(126, 56, 237, 1);
}

.MuiPaper-root {
   height: fit-content !important;
   z-index: 0 !important;
}

